# soxray

./: .gitignore  README.md  main.py  pyproject.toml
backend/: .gitignore  main.py  pyproject.toml
backend/data/: ad_events.csv  invoices.csv  purchase_orders.csv  workday_terminations.csv
backend/output/: workpaper_bpc-001.docx  workpaper_itgc-001.docx
backend/scripts/: generate_data.py
backend/soxray/: agent.py  controls.py  models.py  tools.py
soxray/: controls.py  tools.py
